# Chronofact.ai

./: .env.example  .gitignore  Dockerfile  HOW_TO_VIEW_BACKEND_ERRORS.md  QUICK_FIX_500_ERROR.md  README.md  TROUBLESHOOTING_500_ERROR.md  check_deployment.py  deploy.sh  docker-compose.simple.yml  env.template  main.py  pyproject.toml  render.yaml  requirements.txt  setup-qdrant.sh  start.sh  start_production.py  stop.sh
baml_client/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  generators.baml  main.baml  simple_test.baml
config/: data_sources.yaml
data/: sample_x_data.csv
data/qdrant/: meta.json
docs/: PRD.md  QDRANT_CORE.md  SUBMISSION.md  docker-qdrant.md  qdrant-deployment.md
frontend/: bunfig.toml  package.json  server.ts
frontend/src/: App.tsx  frontend.tsx  index.html
frontend/src/components/: TimelineItem.tsx
frontend/src/lib/: api.ts
frontend/styles/: globals.css
src/: __init__.py  __main__.py  api.py  bias_mitigation.py  cli.py  config.py  embeddings.py  ingestion.py  memory_evolution.py  multimodal.py  multimodal_processor.py  qdrant_setup.py  search.py  timeline_builder.py
src/models/: __init__.py  tweet.py
src/utils/: __init__.py  image_processor.py
tests/: test_main.py
